# quadruped

elevation_mapping/src/: ElevationMapping.cpp  elevation_mapping_node.cpp
elevation_mapping/src/input_sources/: InputSourceManager.cpp
elevation_mapping/src/postprocessing/: PostprocessingPipelineFunctor.cpp  PostprocessorPool.cpp
kindr_ros/kindr_msgs/: CMakeLists.txt  package.xml
quadruped_ros2_control/commands/control_input_msgs/: CMakeLists.txt  package.xml
quadruped_ros2_control/commands/control_input_msgs/msg/: SimBase.msg  StateError.msg
quadruped_ros2_control/controllers/ocs2_quadruped_controller/: CMakeLists.txt  package.xml
quadruped_ros2_control/controllers/ocs2_quadruped_controller/config/: body_filter.yaml  convex_plane_decomposition.yaml  elevation_mapping.yaml  visualize_ocs2.rviz
quadruped_ros2_control/controllers/ocs2_quadruped_controller/launch/: elevation_mapping.launch.py  gazebo.launch.py
quadruped_ros2_control/controllers/ocs2_quadruped_controller/src/: Ocs2QuadrupedController.cpp  Ocs2QuadrupedController.h
quadruped_ros2_control/descriptions/cyberdog_description/config/: gazebo.yaml  robot_control.yaml
quadruped_ros2_control/descriptions/cyberdog_description/urdf/: robot.urdf
quadruped_ros2_control/descriptions/cyberdog_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro
quadruped_ros2_control/hardwares/gz_quadruped_hardware/: CMakeLists.txt  package.xml
quadruped_ros2_control/hardwares/gz_quadruped_hardware/src/: gz_system.cpp
quadruped_ros2_control/libraries/gz_quadruped_playground/worlds/: baylands.sdf  (+3 more)
(+65 files in other folders)
